# microfilm

./: .buildinfo  LICENSE  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: book.yml  manual_matrix_tests.yml  publish-to-test-pypi.yml  test_build.yml  tests.yml  tox_tests.yml
_downloads/67c82d7386509b69c0fdc3a99f60af43/: environment.yml
_sources/: README.md
_sources/docs/: first_plot.ipynb  installation.ipynb  landing.ipynb  overview.ipynb
_sources/docs/source/: microfilm.dataset.rst  microfilm.rst  modules.rst
_sources/notebooks/: Intensity_by_sector.ipynb  create_animations.ipynb  create_illustrations.ipynb  create_panels.ipynb  create_plots.ipynb
binder/: environment.yml
book/: requirements.txt
docs/: first_plot.html  first_plot.ipynb  installation.html  landing.html  landing.ipynb  microfilm_uvdemo.py  overview.html
docs/source/: conf.py  microfilm.dataset.html  microfilm.html  modules.html
microfilm/: __init__.py  colorify.py  dataset.py  microanim.py  microplot.py  splitmasks.py
microfilm/dataset/: __init__.py  dataset.py
microfilm/dataset/tests/: test_dataset.py
microfilm/dataset/tests/test_folders/test_multipage_good/: C1-MAX_mitosis.tif
microfilm/dataset/tests/test_folders/test_nd2_good/: license.html
microfilm/dataset/tests/test_folders/test_tifseries_badnaming/channel1/: C1-MAX0mitosis.tif  C1-MAX10mitosis.tif  C1-MAX13mitosis.tif  C1-MAX17mitosis.tif  C1-MAX20mitosis.tif  C1-MAX21mitosis.tif  C1-MAX23mitosis.tif  C1-MAX24mitosis.tif  C1-MAX25mitosis.tif  C1-MAX27mitosis.tif  C1-MAX35mitosis.tif  C1-MAX36mitosis.tif  C1-MAX38mitosis.tif  C1-MAX39mitosis.tif  C1-MAX40mitosis.tif  C1-MAX41mitosis.tif  C1-MAX42mitosis.tif  C1-MAX43mitosis.tif  C1-MAX44mitosis.tif  C1-MAX45mitosis.tif  C1-MAX48mitosis.tif  C1-MAX49mitosis.tif  C1-MAX8mitosis.tif  C1-MAX9mitosis.tif
microfilm/dataset/tests/test_folders/test_tifseries_badnaming/channel2/: C2-MAX12mitosis.tif  C2-MAX14mitosis.tif  C2-MAX16mitosis.tif  C2-MAX17mitosis.tif  C2-MAX18mitosis.tif  C2-MAX19mitosis.tif  C2-MAX20mitosis.tif  C2-MAX21mitosis.tif  C2-MAX23mitosis.tif  C2-MAX24mitosis.tif  C2-MAX28mitosis.tif  C2-MAX2mitosis.tif  C2-MAX30mitosis.tif  C2-MAX31mitosis.tif  C2-MAX32mitosis.tif  C2-MAX33mitosis.tif  C2-MAX34mitosis.tif  C2-MAX35mitosis.tif  C2-MAX36mitosis.tif  (+11 more)
microfilm/tests/: test_colorify.py  test_microanim.py  test_microplot.py
notebooks/: Intensity_by_sector.html  Intensity_by_sector.ipynb  create_animations.html  create_animations.ipynb  create_illustrations.html  create_illustrations.ipynb  create_panels.html  create_panels.ipynb  create_plots.html  create_plots.ipynb  microplot_module.ipynb
tests/: test_dataset.py
tests/test_folders/test_h5_good/: C1-MAX_mitosis.h5  C2-MAX_mitosis.h5
tests/test_folders/test_multipage_good/: C1-MAX_mitosis.tif  C2-MAX_mitosis.tif
tests/test_folders/test_nd2_good/: license.md
tests/test_folders/test_tifseries_good/channel1/: C1-MAX_mitosis_t1.tif  C1-MAX_mitosis_t16.tif  C1-MAX_mitosis_t28.tif  C1-MAX_mitosis_t3.tif  C1-MAX_mitosis_t37.tif  C1-MAX_mitosis_t4.tif  C1-MAX_mitosis_t47.tif  C1-MAX_mitosis_t5.tif
tests/test_folders/test_tifseries_good/channel2/: C2-MAX_mitosis_t0.tif  C2-MAX_mitosis_t1.tif  C2-MAX_mitosis_t11.tif  C2-MAX_mitosis_t15.tif  C2-MAX_mitosis_t25.tif  C2-MAX_mitosis_t27.tif  C2-MAX_mitosis_t29.tif  C2-MAX_mitosis_t37.tif  C2-MAX_mitosis_t41.tif  C2-MAX_mitosis_t43.tif  C2-MAX_mitosis_t47.tif  C2-MAX_mitosis_t49.tif  C2-MAX_mitosis_t6.tif
(+27 files in other folders)
