[metadata]
name = microfilm
author = Guillaume Witz
author_email = guiwitz@gmail.com
description = Collection of tools for uniform handling and analysis of time lapse microscopy data of various formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/microfilm

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scikit-image
    nd2reader@git+https://github.com/guiwitz/nd2reader.git@master#egg=nd2reader
    matplotlib
    tifffile
    h5py
    aicsimageio
    xarray
    natsort
    ipywidgets