[metadata]
name = microfilm
author = Guillaume Witz
author_email = guillaume.witz@math.unibe.ch
description = Creating figures and animations for multi-channel images with a focus on microscopy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/microfilm
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scikit-image
    nd2reader
    matplotlib
    tifffile
    h5py
    aicsimageio
    xarray
    natsort
    ipywidgets
    imageio
    imageio-ffmpeg