[metadata]
name = microfilm
author = Guillaume Witz
author_email = guillaume.witz@math.unibe.ch
description = Creating figures and animations for multi-channel images with a focus on microscopy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/microfilm
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    cmap
    h5py
    imageio
    matplotlib
    matplotlib-scalebar
    natsort
    numpy
    scikit-image
    tifffile
    xarray

[options.extras_require]
multipage =
    bioio
    bioio-tifffile
nd2 =
    nd2reader
animation =
    imageio-ffmpeg
    ipywidgets
all =
    bioio
    bioio-tifffile
    imageio-ffmpeg
    ipywidgets
    nd2reader

